crates/vihaco/tests/compile_fail/composite_machine/invalid-loadable-name.rs
struct Child;

#[vihaco::composite]
struct BadMachine {
    #[device(0x01)]
    #[loadable("child/nested")]
    child: Child,
}

fn main() {}
